--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,10 +1,18 @@
+@import "../../global.scss";
+
 .intro {
   background-color: white;
   display: flex;
 
+  @include mobile{
+    flex-direction: column;
+    align-items: center;
+  }
+
   .left {
     flex: 0.5;
     overflow: hidden;
+
     .imgContainer {
       width: 700px;
       height: 700px;
@@ -14,8 +22,17 @@
       align-items: flex-end;
       justify-content: center;
       float: right;
+
+      @include mobile{
+        align-items: flex-start;
+      }
+
       img {
         height: 90%;
+
+        @include mobile{
+          height: 50%;
+        }
       }
     }
   }
@@ -31,22 +48,38 @@
       flex-direction: column;
       justify-content: center;
 
+      @include mobile{
+        padding-left: 0;
+        align-items: center;
+      }
+
       h1 {
         font-size: 60px;
         margin: 10px 0;
+
+        @include mobile{
+          font-size: 40px;
+        }
       }
       h2 {
         font-size: 35px;
       }
       h3 {
         font-size: 30px;
-        span{
-            font-size: inherit;
-            color: crimson;
+
+        @include mobile{
+          font-size: 20px;
         }
-        .ityped-cursor{
-            animation: blink 1s infinite;
+
+        span {
+          font-size: inherit;
+          color: crimson;
         }
+
+        .ityped-cursor {
+          animation: blink 1s infinite;
+        }
+
         @keyframes blink {
             50%{
                 opacity: 1;
@@ -60,12 +93,13 @@
     a {
       position: absolute;
       bottom: 10px;
-      left: 50%;
+      left: 40%;
 
       img {
         width: 30px;
         animation: arrowBlink 2s infinite;
       }
+
       @keyframes arrowBlink {
         100% {
           opacity: 0;
