--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,4 +1,5 @@
 @import "../../global.scss";
+
 .menu {
   width: 300px;
   height: 100vh;
@@ -29,7 +30,7 @@
     li {
       margin-bottom: 25px;
       a {
-        font-style: inherit;
+        font-size: inherit;
         color: inherit;
         text-decoration: none;
       }
@@ -39,7 +40,6 @@
       }
     }
   }
-
   .lang {
     display: flex;
     align-items: center;
