--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -1,12 +1,18 @@
 @import "../../global.scss";
+
 .portfolioList {
-    font-style: 14px;
-    margin-right: 50px;
-    padding: 7px;
-    border-radius: 10px;
-    cursor: pointer;
-    &.active {
-      background-color: $mainColor;
-      color: white;
-    }
+  font-size: 14px;
+  margin-right: 50px;
+  padding: 7px;
+  border-radius: 10px;
+  cursor: pointer;
+
+  @include mobile{
+    margin-right: 20px;
   }
+
+  &.active {
+    background-color: $mainColor;
+    color: white;
+  }
+}
