--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,4 +1,5 @@
 @import "../../global.scss";
+
 .topbar {
   width: 100%;
   height: 70px;
@@ -7,7 +8,7 @@
   position: fixed;
   top: 0;
   z-index: 3;
-  transition: all 1s ease ;
+  transition: all 1s ease;
 
   .wrapper {
     padding: 10px 30px;
@@ -18,6 +19,7 @@
     .left {
       display: flex;
       align-items: center;
+
       .logo {
         font-size: 40px;
         font-weight: 700;
@@ -25,20 +27,28 @@
         color: inherit;
         margin-right: 40px;
       }
+
       .itemContainer {
         display: flex;
         align-items: center;
         margin-left: 30px;
+
+        @include mobile{
+          display: none;
+        }
+
         .icon {
           font-size: 18px;
           margin-right: 5px;
         }
+
         span {
-          font-style: 15px;
+          font-size: 15px;
           font-weight: 500;
         }
       }
     }
+
     .right {
       .hamburger {
         width: 32px;
@@ -47,6 +57,7 @@
         flex-direction: column;
         justify-content: space-between;
         cursor: pointer;
+
         span {
           width: 100%;
           height: 3px;
@@ -59,10 +70,10 @@
   }
 
   &.active {
-   background-color: $mainColor;
-   color: white;
+    background-color: $mainColor;
+    color: white;
 
-   .hamburger {
+    .hamburger {
       span {
         &:first-child {
           background-color: white;
@@ -72,12 +83,10 @@
           opacity: 0;
         }
         &:last-child {
-           background-color:white ;
-           transform: rotate(-45deg);
+          background-color: white;
+          transform: rotate(-45deg);
         }
       }
     }
- }
- 
-
+  }
 }
