--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -1,26 +1,22 @@
-@import "../../global.scss";
-
 .popup-overlay {
   z-index: 2;
   position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: $mainColor;
-  transition: opacity 500ms;
-  visibility: hidden;
-  opacity: 0;
+  background: #15023a;
+  transition: all 2s ease-in-out;
 
   &.active {
     visibility: visible;
-    opacity: 0.6;
+    opacity: 1;
+  }
+  &.unactive {
+    visibility: hidden;
+    opacity: 0;
   }
 }
 
 .popup {
   margin: auto;
-  margin-top:20%;
+  margin-top: 20%;
   padding: 20px;
   background: #fff;
   border-radius: 5px;
@@ -28,11 +24,7 @@
   height: auto;
   position: relative;
   display: flex;
-  transition: all 5s ease-in-out;
-
-  h2 {
-    margin-top: 0;
-  }
+  transition: all 2s ease-in-out;
 
   .close {
     position: absolute;
@@ -52,5 +44,13 @@
   .content {
     max-height: 30%;
     overflow: auto;
+    h1,
+    h2,
+    h3,
+    p,
+    img {
+      text-align: center;
+    }
+    margin: auto;
   }
 }
