portfolio not ok

--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -16,7 +16,7 @@
 
 .popup {
   margin: auto;
-  margin-top: 20%;
+  margin-top: 20vh;
   padding: 20px;
   background: #fff;
   border-radius: 5px;
