--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -6,7 +6,6 @@
   flex-direction: column;
   align-items: center;
   
-
   h1 {
     font-size: 50px;
 
@@ -20,7 +19,6 @@
     padding: 0;
     list-style: none;
     display: flex;
-    overflow: hidden;
     @include mobile {
       margin: 10px 0;
       flex-wrap: wrap;
@@ -69,7 +67,7 @@
         object-fit: cover;
         z-index: 1;
       }
-
+     
       &:hover {
         background-color: $mainColor;
         img {
@@ -77,6 +75,19 @@
           z-index: 0;
         }
       }
+
+      &.active {
+        z-index:2;
+        width:70vh;
+        height:70vh;
+        &:hover {
+          img {
+            opacity: 0.2;
+            z-index: 0;
+          }
+        }
+      }
     }
   }
 }
+
