--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -5,9 +5,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
   h1 {
     font-size: 50px;
+    overflow: hidden;
 
     @include mobile {
       font-size: 20px;
@@ -23,6 +24,9 @@
       margin: 10px 0;
       flex-wrap: wrap;
       justify-content: center;
+    }
+    li {
+      overflow: hidden;
     }
   }
 
@@ -67,7 +71,7 @@
         object-fit: cover;
         z-index: 1;
       }
-     
+
       &:hover {
         background-color: $mainColor;
         img {
@@ -77,12 +81,12 @@
       }
 
       &.active {
-        z-index:2;
-        width:70vh;
-        height:70vh;
+        z-index: 2;
+        width: 70vh;
+        height: 70vh;
         &:hover {
           img {
-            opacity: 0.2;
+            opacity: 0;
             z-index: 0;
           }
         }
@@ -90,4 +94,3 @@
     }
   }
 }
-
